// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > snapshots > matches snapshot at 0% 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="relative h-2 w-full overflow-hidden rounded-full bg-secondary"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
    style="width: 0%;"
  />
</div>
`;

exports[`Progress > snapshots > matches snapshot for default variant 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="relative h-2 w-full overflow-hidden rounded-full bg-secondary"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
    style="width: 50%;"
  />
</div>
`;

exports[`Progress > snapshots > matches snapshot for destructive variant 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="75"
  class="relative h-2 w-full overflow-hidden rounded-full bg-red-100"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-destructive"
    style="width: 75%;"
  />
</div>
`;

exports[`Progress > snapshots > matches snapshot for success variant 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="100"
  class="relative h-2 w-full overflow-hidden rounded-full bg-green-100"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-green-500"
    style="width: 100%;"
  />
</div>
`;

exports[`Progress > snapshots > matches snapshot for warning variant 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="25"
  class="relative h-2 w-full overflow-hidden rounded-full bg-yellow-100"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-yellow-500"
    style="width: 25%;"
  />
</div>
`;

exports[`Progress > snapshots > matches snapshot with custom className 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="60"
  class="relative w-full overflow-hidden rounded-full bg-secondary h-4"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
    style="width: 60%;"
  />
</div>
`;
